# SoftSynth

./: .gitignore  CMakeLists.txt  README.md  SoftSynth.cpp
src/: Oscillator.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.h
